# CPPCommon

./: .gitignore  CMakeLists.txt  LICENSE  README.md  gen_vsproj.bat
Example/: CMakeLists.txt  DisplayExample.cpp
Source/: CMakeLists.txt
Source/base/: BaseDefs.h  ClearAction.h  Configuration.h
Source/base/process/: ProcessDefs.h  ProcessUtils.cpp  ProcessUtils.h
Source/base/win/: DllLoader.h
Source/ui/: Rect.h
Source/ui/display/: DisplayInfo.cpp  DisplayInfo.h
